# propolis

cli/: Cargo.toml
cli/src/: config.rs  main.rs
client/src/: api.rs
lib/propolis/: Cargo.toml
lib/propolis/src/hw/: mod.rs
lib/propolis/src/hw/pci/: bits.rs
lib/propolis/src/hw/usb/: mod.rs
lib/propolis/src/hw/usb/xhci/: bits.rs  controller.rs  mod.rs  registers.rs
lib/propolis/src/util/: regmap.rs
propolis/: Cargo.toml
propolis/src/: instance.rs  inventory.rs  lib.rs
propolis/src/hw/: ps2ctrl.rs
propolis/src/hw/chipset/: i440fx.rs
propolis/src/hw/crucible/: block.rs
propolis/src/hw/nvme/: mod.rs  queue.rs
propolis/src/hw/pci/: device.rs
propolis/src/hw/qemu/: debug.rs  fwcfg.rs  ramfb.rs
propolis/src/hw/uart/: lpc.rs
propolis/src/hw/virtio/: block.rs  pci.rs  viona.rs
propolis/src/vmm/: machine.rs  mapping.rs
server/: Cargo.toml
server/src/lib/: config.rs  initializer.rs  server.rs
