[package]
name = "propolis"
version = "0.1.0"
authors = ["Patrick Mooney <pmooney@oxide.computer>"]
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
bitflags = "1.2"
byteorder = "1"
lazy_static = "1.4"
num_enum = "0.5"
thiserror = "1.0"
bhyve_api = { path = "../bhyve-api" }
dladm = { path = "../dladm" }
viona_api = { path = "../viona-api" }
usdt = "0.1.11"
crucible = { git = "https://github.com/oxidecomputer/crucible", branch = "main", optional = true }
# crucible = { path = "../../crucible/upstairs", optional = true }
bytes = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.2"

[features]
default = ["crucible"]

